--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <section id="about" class="section">
 
- <U>about us</U>
+ <U>about us test</U>
 <p><b>We believe that many of the socio-economic problems in Israel, such as the high cost of living and the deepening economic inequality along with the declining social cohesion, are the result of inherent structural market failures and misrepresentation of the wider publics interest in the democratic system.</b></p>
 <p>The democratic system is based on consistent, active and smart civil participation that starts with voting in political parties primaries, voting and participating in the general elections and continues during the time of the administration tenure.
  Today, given the fact that most of the Israeli public is only partially involved and active, small interest groups are able to exert pressure on decision-makers and determine the public agenda.
