--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="style.css" /> <!-- referees to css-->
  <title>Israel 2050</title>
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v3.2"></script>
 <div id="menu">
 <li><a href="#about">About Us</a></li>
 <li><a href="#photos">Our Photos</a></li>
@@ -13,11 +15,14 @@
 <li><a href="#qrcoder">QR code</a></li>
 <li><a href="#spa">Q&A</a></li>
 <li><a href="#contact">Contact Us</a></li>
+ <div class="fb-like" data-href="https://tsizery.github.io/htmlWeb1/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 </div>
 <img src="images/menu.jpg" alt="background">
 
 <section id="about" class="section">
-
+ <br>
+ <br>
+ <br>
  <U>about us test</U>
 <p><b>We believe that many of the socio-economic problems in Israel, such as the high cost of living and the deepening economic inequality along with the declining social cohesion, are the result of inherent structural market failures and misrepresentation of the wider publics interest in the democratic system.</b></p>
 <p>The democratic system is based on consistent, active and smart civil participation that starts with voting in political parties primaries, voting and participating in the general elections and continues during the time of the administration tenure.
