--- a/index.html
+++ b/index.html
@@ -15,102 +15,53 @@
 <li><a href="#qrcoder">QR code</a></li>
 <li><a href="#spa">Q&A</a></li>
 <li><a href="#contact">Contact Us</a></li>
- <div class="fb-like" data-href="https://tsizery.github.io/htmlWeb1/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 </div>
 <img src="images/menu.jpg" alt="background">
-
+<br/>
+<br/>
+<br/>
 <section id="about" class="section">
  <br>
  <br>
  <br>
  <U>about us test</U>
-<p><b>We believe that many of the socio-economic problems in Israel, such as the high cost of living and the deepening economic inequality along with the declining social cohesion, are the result of inherent structural market failures and misrepresentation of the wider publics interest in the democratic system.</b></p>
-<p>The democratic system is based on consistent, active and smart civil participation that starts with voting in political parties primaries, voting and participating in the general elections and continues during the time of the administration tenure.
- Today, given the fact that most of the Israeli public is only partially involved and active, small interest groups are able to exert pressure on decision-makers and determine the public agenda.
- The public representatives are dependant on these small interest groups and therefore tend to represent and promote only the interests of these groups at the expense of the general public.</p>
-<p><b>Public representatives are dependant on these small interest groups since they have control over major sources of political and economic power and on the media.</b></p>
-<p>For instance, various business groups from different domains (banking services, pension, food etc.), influential workers’ committees (Israel Electric Corporation, Israel-ports etc.) that act to put pressure on the political system and create major impact by mass-registration to political parties and lobbying, thus preventing public representatives from implementing necessary reforms and changes to advance competition in these markets. Therefore, market failures are created, such as the high cost of living and housing.</p>
+ <p><b>We believe that many of the socio-economic problems in Israel, such as the high cost of living and the deepening economic inequality along with the declining social cohesion, are the result of inherent structural market failures and misrepresentation of the wider publics interest in the democratic system.</b></p>
+ <p>The democratic system is based on consistent, active and smart civil participation that starts with voting in political parties primaries, voting and participating in the general elections and continues during the time of the administration tenure.
+  Today, given the fact that most of the Israeli public is only partially involved and active, small interest groups are able to exert pressure on decision-makers and determine the public agenda.
+  The public representatives are dependant on these small interest groups and therefore tend to represent and promote only the interests of these groups at the expense of the general public.</p>
+ <p><b>Public representatives are dependant on these small interest groups since they have control over major sources of political and economic power and on the media.</b></p>
+ <p>For instance, various business groups from different domains (banking services, pension, food etc.), influential workers’ committees (Israel Electric Corporation, Israel-ports etc.) that act to put pressure on the political system and create major impact by mass-registration to political parties and lobbying, thus preventing public representatives from implementing necessary reforms and changes to advance competition in these markets. Therefore, market failures are created, such as the high cost of living and housing.</p>
  <p><b>In order to deal with this problem, we need to raise a conscious and active civil society and cultivate leadership within the public.
-<br>
+  <br>
   Israel 2050 acts to create that kind of society.</b></p>
- <br/>
-<br/>
 </section>
-my photos
+
 <section id="photos" class="section">
-<img src="images/kenes.jpg" width="50%" height="50%" alt="economic fest">
-<img src="images/anashim.jpg" width="50%" height="50%" alt="economic fest">
+ <br>
+ <br>
+ our photos
+ <br>
+<img src="images/kenes.jpg" width="33.3%" height="33.3%" alt="economic fest"><img src="images/anashim.jpg" width="50%" height="50%" alt="economic fest">
 </section>
 
 <section id="playlist" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
- <br/>
+ <br>
+ <br>
+ my playlist
+ <br>
  <iframe height="600px" width="1000" src="https://www.youtube.com/embed/videoseries?list=PL7E6B2C24E01C83F9" allowfullscreen></iframe>
-<br/>
-<br/>
-<br/>
 </section>
-
 <section id="like" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
-<br/>
-<br/>
+ <br>
+ <br>
+ give me a like
+ <br>
+ <div class="fb-like" data-href="https://tsizery.github.io/htmlWeb1/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+
 </section>
 
 <section id="qrcoder" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 scan my code
-<br/>
-<br/>
-<br/>
 </section>
 
 <section id="spa" class="section">
