--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  <br>
 scan my code
  <br>
- 
+    <img src="images/QRC.jpg" width="33.3%" height="33.3%" alt="QR Code">
 </section>
 
 <section id="spa" class="section">
