--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <div id="fb-root"></div>
 <script async defer src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v3.2"></script>
 <div id="menu">
+ <ul>
 <li><a href="#about">About Us</a></li>
 <li><a href="#photos">Our Photos</a></li>
 <li><a href="#playlist">My Playlist</a></li>
@@ -15,11 +16,9 @@
 <li><a href="#qrcoder">QR code</a></li>
 <li><a href="#spa">Q&A</a></li>
 <li><a href="#contact">Contact Us</a></li>
+ </ul>
 </div>
-<img src="images/menu.jpg" alt="background">
-<br/>
-<br/>
-<br/>
+<img src="images/menu.jpg" width="100%" alt="background">
 <section id="about" class="section">
  <br>
  <br>
@@ -65,7 +64,7 @@
  <br>
 scan my code
  <br>
-    <img src="images/QRC.jpg" width="33.3%" height="33.3%" alt="QR Code">
+ <img src="images/QRC.jpg" alt="QR Code">
 </section>
 
 <section id="spa" class="section">
@@ -92,26 +91,31 @@ ans
 </section>
 
 <section id="contact" class="section">
+contact us
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-contact me
-<br/>
-<br/>
-<br/>
+ <div class="container">
+  <div style="text-align:center">
+   <h2>Contact Us</h2>
+   <p>Swing by for a cup of coffee, or leave us a message:</p>
+  </div>
+  <div class="row">
+   <div class="column">
+    <img src="/w3images/map.jpg" style="width:100%">
+   </div>
+   <div class="column">
+    <form action="mailto:tsizer@post.bgu.ac.il" method="post">
+     <label for="fname">First Name</label>
+     <input type="text" id="fname" name="firstname" placeholder="Your name..">
+     <label for="lname">Last Name</label>
+     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+     <label for="subject">Message</label>
+     <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+     <input type="submit" value="Submit">
+    </form>
+   </div>
+  </div>
+ </div>
 </section>
 
 
