--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
  <title>Israel 2050</title>
 </head>
 <body>
-<div id="fb-root"></div>
-<script async defer src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v3.2"></script>
 <div id="menu">
  <ul>
 <li><a href="#about">About Us</a></li>
@@ -23,7 +21,7 @@
  <br>
  <br>
  <br>
- <U>about us test</U>
+ <h1>about us </h1>
  <p><b>We believe that many of the socio-economic problems in Israel, such as the high cost of living and the deepening economic inequality along with the declining social cohesion, are the result of inherent structural market failures and misrepresentation of the wider publics interest in the democratic system.</b></p>
  <p>The democratic system is based on consistent, active and smart civil participation that starts with voting in political parties primaries, voting and participating in the general elections and continues during the time of the administration tenure.
   Today, given the fact that most of the Israeli public is only partially involved and active, small interest groups are able to exert pressure on decision-makers and determine the public agenda.
@@ -38,31 +36,42 @@
 <section id="photos" class="section">
  <br>
  <br>
- our photos
+ <h1>our photos</h1>
  <br>
-<img src="images/kenes.jpg" width="33.3%" height="33.3%" alt="economic fest"><img src="images/anashim.jpg" width="50%" height="50%" alt="economic fest">
+ <div class="photos">
+  <img class="zoom" src="images/bankim.jpg" >
+  <img class="zoom" src="images/leadership.jpg" >
+  <img class="zoom" src="images/poor.jpg" >
+  <br>
+  <img class="zoom" src="images/sapir.jpg" >
+  <img class="zoom" src="images/shhitut.jpg" >
+  <img class="zoom" src="images/train.jpg">
+  <br>
+  <img class="zoom" src="images/kenes.jpg" >
+  <img class="zoom" src="images/wakeup.jpg">
+  <img class="zoom" src="images/hospital.jpg">
+ </div>
 </section>
 
 <section id="playlist" class="section">
  <br>
  <br>
- my playlist
+ <h1>my playlist</h1>
  <br>
  <iframe height="600px" width="1000" src="https://www.youtube.com/embed/videoseries?list=PL7E6B2C24E01C83F9" allowfullscreen></iframe>
 </section>
 <section id="like" class="section">
  <br>
  <br>
- give me a like
+ <h1>give me a like</h1>
  <br>
  <div class="fb-like" data-href="https://tsizery.github.io/htmlWeb1/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
-
 </section>
 
 <section id="qrcoder" class="section">
  <br>
  <br>
-scan my code
+ <h1>scan my code</h1>
  <br>
  <img src="images/QRC.jpg" alt="QR Code">
 </section>
@@ -96,12 +105,12 @@ contact us
 <br/>
  <div class="container">
   <div style="text-align:center">
-   <h2>Contact Us</h2>
+   <h1>Contact Us</h1>
    <p>Swing by for a cup of coffee, or leave us a message:</p>
   </div>
   <div class="row">
    <div class="column">
-    <img src="/w3images/map.jpg" style="width:100%">
+    <img src="images/anashim.jpg">" style="width:100%">
    </div>
    <div class="column">
     <form action="mailto:tsizer@post.bgu.ac.il" method="post">
@@ -117,20 +126,3 @@ contact us
   </div>
  </div>
 </section>
-
-
-<script type="text/javascript">
-$(function(){
-  $("#nav a").click(function(e){
-    e.preventDefault();
-    $('html,body').scrollTo(this.hash,this.hash); 
-  });
-});
-</script>
-<script type="text/javascript">
- $(document).scroll(function() {
-    $('#menu').toggle($(this).scrollTop()>1000)
- });​
- </script>
-</body>
-</html>
