--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
  <title>Israel 2050</title>
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=76854406715&autoLogAppEvents=1"></script>
 <div id="menu">
  <ul>
 <li><a href="#about">About Us</a></li>
@@ -21,6 +23,7 @@
  <br>
  <br>
  <br>
+ <div class="container">
  <h1>about us </h1>
  <p><b>We believe that many of the socio-economic problems in Israel, such as the high cost of living and the deepening economic inequality along with the declining social cohesion, are the result of inherent structural market failures and misrepresentation of the wider publics interest in the democratic system.</b></p>
  <p>The democratic system is based on consistent, active and smart civil participation that starts with voting in political parties primaries, voting and participating in the general elections and continues during the time of the administration tenure.
@@ -31,6 +34,7 @@
  <p><b>In order to deal with this problem, we need to raise a conscious and active civil society and cultivate leadership within the public.
   <br>
   Israel 2050 acts to create that kind of society.</b></p>
+ </div>
 </section>
 
 <section id="photos" class="section">
@@ -65,8 +69,7 @@
  <br>
  <h1>give me a like</h1>
  <br>
- <div class="fb-like" data-href="https://tsizery.github.io/htmlWeb1/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
-</section>
+ <div class="fb-like" data-href="https://tsizery.github.io/htmlWeb1/#spa" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div></section>
 
 <section id="qrcoder" class="section">
  <br>
@@ -76,42 +79,47 @@
  <img src="images/QRC.jpg" alt="QR Code">
 </section>
 
-<section id="spa" class="section">
+<section id="spa" >
+ <br>
+ <br>
+ <div class="container">
+ <h1>Q&A</h1>
+<h4>Difference between Web 1.0, Web 2.0 and Web 3.0:</h4>
+  <h5>Web 1.0</h5>
+   It is the "readable" phrase of the World Wide Web with flat data.
+  In Web 1.0, there is only limited interaction between sites and web users.<br>
+  For example, if a user want to search for a movie in Web 1.0 he could find simply information where he passively receive information about the movie.
+  <br/>
+  <h5>Web 2.0</h5>
+   It is the "writable" phrase of the World Wide Web with interactive data.<br>
+  Unlike Web 1.0, Web 2.0 facilitates interaction between web users and sites, so it allows users to interact more freely with each other.<br>
+  Web 2.0 encourages participation, collaboration, and information sharing.<br>
+  Examples of Web 2.0 applications are Youtube, Wiki, Flickr, Facebook, and so on.<br>
+  In our use case, in web 2.0 the user can being given the opportunity to post reviews, comments, and feedback about the movie after watching.
+  <br/>
+  <h5>Web 3.0</h5>
+  It is the "executable" phrase of Word Wide Web with dynamic applications, interactive services, and "machine-to-machine" interaction.<br>
+  Web 3.0 is a semantic web which refers to the future.<br>
+  In Web 3.0, computers can interpret information like humans and intelligently generate and distribute useful content tailored to the needs of users.<br>
+  In our use case, in web 3.0 the user can being given the opportunity to post reviews, comments, and feedback about the movie after watching.
 <br/>
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-ans
-<br/>
-<br/>
-<br/>
+ </div>
 </section>
 
 <section id="contact" class="section">
-contact us
 <br/>
 <br/>
  <div class="container">
   <div style="text-align:center">
    <h1>Contact Us</h1>
-   <p>Swing by for a cup of coffee, or leave us a message:</p>
+   <p>Do you want to join us? Do you have any questions about the organization or possible collaborations?<br>
+
+    <b>Contact us!</b></p>
   </div>
   <div class="row">
-   <div class="column">
-    <img src="images/anashim.jpg">" style="width:100%">
-   </div>
    <div class="column">
     <form action="mailto:tsizer@post.bgu.ac.il" method="post">
      <label for="fname">First Name</label>
